codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__active_grouped_web_search_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
• Searching the web
  └ Search rust ratatui wrapping
