codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__grouped_web_search_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
• Searched the web
  └ Search rust ratatui wrapping
    Open https://docs.rs/ratatui/latest/ratatui/
    Open a web page
    Browse web content
    Find 'installation' in
         https://docs.rs/ratatui/latest/ratatui/
