codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__standalone_unix_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭────────────────────────────────────────────────────────╮
│ ✨ Update available! 0.150.1-better-codex -> 9.9.9     │
│ Run better-codex update to update.                     │
│                                                        │
│ See full release notes:                                │
│ https://github.com/AmazingTurtle/codex/releases/latest │
╰────────────────────────────────────────────────────────╯
